--- a/week6/s6_bayesianRegression.ipynb
+++ b/week6/s6_bayesianRegression.ipynb
@@ -1071,27 +1071,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24542582fd1241179ec577c8a56f3c50",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "interactive(children=(IntSlider(value=2, description='part', max=5), IntSlider(value=14, description='num_basi…"
+       "array([[-0.93444838,  0.74684332,  0.27589668, -0.04661108, -0.65163245,\n",
+       "        -1.65306564, -0.36207712,  0.88876138, -0.04520181,  0.07990466]])"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display_plots('olympic_5cv{part:0>2}_BLM_polynomial_num_basis{num_basis:0>3}.svg', \n",
-    "                            directory='./diagrams', part=(0, 5), num_basis=(1, max_basis))"
+    "# display_plots('olympic_5cv{part:0>2}_BLM_polynomial_num_basis{num_basis:0>3}.svg', \n",
+    "#                             directory='./diagrams', part=(0, 5), num_basis=(1, max_basis))"
    ]
   },
   {
