--- a/week7/lab_session_week7.ipynb
+++ b/week7/lab_session_week7.ipynb
@@ -86,9 +86,11 @@
     "$$\n",
     "where $\\mathbf{x}_{i, :}$ is the $i$th row of the latent variables, $\\mathbf{X}$, then show that\n",
     "$$\n",
+    "f_j(\\mathbf{x}_{i, :}) = \\mathbf{x}_{i, :} \\mathbf{w}_{j, :} ^\\top\n",
+    "$$\n",
+    "only when $q=n=1$ $$\n",
     "f_j(\\mathbf{x}_{i, :}) = \\mathbf{w}_{j, :}^\\top \\mathbf{x}_{i, :}\n",
     "$$\n",
-    "\n",
     "*10 marks*"
    ]
   },
@@ -98,7 +100,26 @@
    "source": [
     "#### Question 1 Answer\n",
     "\n",
-    "Write your answer to the question in this box."
+    "I would like to answer the question $\\mathbf{a)}$ in the email Dr.haiping sent to us.\n",
+    "\n",
+    "We know $\\mathbf{F}$ is a $n \\times q$ dimensional matrix and it consists of n vectors $\\mathbf{y}$ which are q dimensional vectors and has been transposed.\n",
+    "Expanding $\\mathbf{F}$ is \n",
+    "$$\n",
+    "\\mathbf{F} = \\begin{bmatrix} \\mathbf{y_1}^\\top \\\\ \\mathbf{y_2}^\\top \\\\ \\vdots \\\\ \\mathbf{y_n}^\\top \\end{bmatrix}\n",
+    "$$\n",
+    "Expending $\\mathbf{y}$ is known as previous prediction data, which looks like\n",
+    "$$\n",
+    "\\mathbf{y} = \\begin{bmatrix} y_1 \\\\ y_2 \\\\ \\vdots \\\\ y_q \\end{bmatrix}\n",
+    "$$\n",
+    "It is same to matrix $\\mathbf{X}$ and matrix $\\mathbf{W}$. Matrix $\\mathbf{X}$ consists of n vectors $\\mathbf{x}$ which are $q$ dimensional vectors and has been transposed. Matrix $\\mathbf{W}$ consists of p vectors $\\mathbf{w}$ which are $q$ dimensional vectors and has been transposed.\n",
+    "$$$$\n",
+    "For the each of $f_{i,j}$ in $\\mathbf{y}$, $f_{i,j}$ could be calculated from $\\mathbf{w}_{j,:}$ and $\\mathbf{x}_{i,:}$ but $\\mathbf{w}_{j,:}$ is $j$th row in $\\mathbf{W}$ and is a $1 \\times q$ dimensional vector and $\\mathbf{x}_{i,:}$ is $i$th row in $\\mathbf{X}$ and is also a $1 \\times q$ dimensional vector. So, if $\\mathbf{w}_{j,:}$ could times $\\mathbf{x}_{i,:}$, the one in the between must be transposed, e.g. $\\mathbf{w}_{j,:}^\\top$ or $\\mathbf{x}_{i,:}^\\top$. The function could be rewrite as  \n",
+    "$$f_j(\\mathbf{x}_{i, :}) = \\mathbf{x}_{i, :} \\mathbf{w}_{j,:} ^\\top$$\n",
+    "or\n",
+    "$$f_j(\\mathbf{x}_{i, :}) = f_j(\\mathbf{x}_{i, :})^\\top = \\mathbf{w}_{j, :} \\mathbf{x}_{i,:}  ^\\top$$\n",
+    "the reason of why $f_j(\\mathbf{x}_{i, :})$could be equal to $f_j(\\mathbf{x}_{i, :})^\\top$ is that $f_j(\\mathbf{x}_{i, :})$ is a scalar.\n",
+    "$$$$\n",
+    "When $n=q=1$, the $\\mathbf{X}$ is represented by a scalar and $\\mathbf{W}$ is represented by a p dimensional vector so $\\mathbf{w}_{j,:}$ become a scalar and whatever $f_j(\\mathbf{x}_{i, :})$ could be written in $f_j(\\mathbf{x}_{i, :}) = \\mathbf{w}_{j, :}^\\top \\mathbf{x}_{i, :}$ or $f_j(\\mathbf{x}_{i, :}) = \\mathbf{x}_{i, :} \\mathbf{w}_{j, :} ^\\top$. They have the same meaning, a scalar times a scalar."
    ]
   },
   {
@@ -1018,11 +1039,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting msgpack\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f3/b6/9affbea179c3c03a0eb53515d9ce404809a122f76bee8fc8c6ec9497f51f/msgpack-0.5.6.tar.gz (138kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 143kB 2.1MB/s ta 0:00:01\n",
+      "\u001b[?25hBuilding wheels for collected packages: msgpack\n",
+      "  Running setup.py bdist_wheel for msgpack ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /Users/xavier/Library/Caches/pip/wheels/f0/02/4c/525b56fce78c415eb8066f6554f9de02792df26b8f882f6d65\n",
+      "Successfully built msgpack\n",
+      "Installing collected packages: msgpack\n",
+      "Successfully installed msgpack-0.5.6\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code with comments and output\n",
+    "\n",
     "\n"
    ]
   },
@@ -1048,7 +1088,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1062,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
